Adding File Open Dialog for yml files.

--- a/RayTracerTest/Scenes/chapter10.yml
+++ b/RayTracerTest/Scenes/chapter10.yml
@@ -10,27 +10,13 @@
   at: [-3, 6, -8]
   intensity: [1.2, 1.2, 1.2]
 
-  # get floor() {
-  #   const pattern = Checkers.of(Color.WHITE, Color.BLACK)
-  #   pattern.transform = Matrix.transform({
-  #     rotate: { y: 45 },
-  #     scale: 2,
-  #   })
-
-  #   return Plane.create({
-  #     pattern,
-  #     diffuse: 0.7,
-  #     ambient: 0.3,
-  #   })
-  # }
-
 # floor
 - add: plane
   material:
     pattern:
       type: checkers
       transform:
-        - [ rotate-y, 45 ]
+        - [ rotate-y, 0.785398163397448 ]
         - [ scale, 2, 2, 2 ]
       colors:
         - [1, 1, 1]
@@ -38,23 +24,10 @@
     ambient: 0.3
     diffuse: 0.7
 
-  # get wall() {
-  #   const pattern = Ring.of(Color.WHITE, Color.of(1, 0, 0))
-  #   return Plane.create({
-  #     pattern,
-  #     diffuse: 0.7,
-  #     ambient: 0.2,
-  #     transform: Matrix.transform({
-  #       rotate: { x: 90 },
-  #       move: { z: 5 },
-  #     })
-  #   })
-  # }
-
 # wall
 - add: plane
   transform:
-    - [ rotate-x, 90 ]
+    - [ rotate-x, 1.570796326794897 ]
     - [ translate, 0, 0, 5 ]
   material:
     pattern:
@@ -65,22 +38,6 @@
     diffuse: 0.7
     ambient: 0.2
 
-  # get sphere() {
-  #   const pattern = Stripe.of(Color.of(1, 0.5, 0), Color.of(1, 0.3, 0))
-  #   pattern.transform = Matrix.transform({
-  #     rotate: { z: 90 },
-  #     scale: 0.05
-  #   })
-
-  #   return Sphere.create({
-  #     pattern,
-  #     ambient: 0.15,
-  #     transform: Matrix.transform({
-  #       scale: { x: 0.5, y: 4.5, z: 0.5 },
-  #       move: { x: 1.5 },
-  #     })
-  #   })
-
 # sphere
 - add: sphere
   material:
@@ -90,7 +47,7 @@
         - [1, 0.5, 0]
         - [1, 0.3, 0]
       transform: 
-        - [ rotate-z, 90 ]
+        - [ rotate-z, 1.570796326794897 ]
         - [ scale, 0.05, 0.05, 0.05 ]
   ambient: 0.15
   transform: 
