Updated Yams to 3.0.1 which eliminated only warning.

--- a/.gitignore
+++ b/.gitignore
@@ -107,4 +107,6 @@ xcuserdata
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+**/.DS_Store
+
 # End of https://www.gitignore.io/api/xcode,swift,swiftpm
